# caustic-os

./: .editorconfig  .gitignore  README.md  flake.nix
.github/: CODEOWNERS  renovate.json5
.github/actions/setup-nix-cache/: action.yml
.github/workflows/: ci.yaml  codeql.yaml  release.yaml  test-build.yaml
checks/: caustic-hardening.nix
crates/caustic-ota/: Cargo.toml
crates/caustic-ota/src/: main.rs
hardware/cm4-poe-ups/: default.nix
modules/caustic/: default.nix  hardening.nix  networking.nix  recovery.nix  users.nix
modules/persist/: default.nix
modules/services/: aperture.nix  caustic-ota.nix  dropbear.nix
systems/dev/: default.nix
systems/production/: default.nix  image.nix  update-package.nix  updates.nix
